--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "nodemon": "^3.0.2",
     "path": "^0.12.7",
+    "uniqid": "^5.4.0",
     "ws": "^8.16.0"
   }
 }
